# umiaq

./: .gitignore  CHANGELOG.md  Cargo.toml  GEMINI.md  README.md  RELEASE.md  TERMINOLOGY.md  TODO.md  build.rs  index.html
.github/workflows/: pages.yml  promote.yml
docs/: ERROR_CODES.md  crates.js  help.html  settings.html  src-files.js
docs/bench_local/: all.html  constant.MAX_PATTERN_LEN.html  constant.NUM_RESULTS.html  fn.get_cases.html  fn.main.html  fn.pluralizer.html  index.html  struct.Case.html  struct.Cli.html
docs/generate_error_docs/: all.html  fn.all_parse_error_variants.html  fn.all_solver_error_variants.html  fn.main.html  index.html  macro.generate_error_docs.html  sidebar-items.js
docs/search.index/: 1e5de0009a97.js  290893ba53de.js  3637729ba0af.js  39ce388e4e55.js  3a04322b5cc2.js  4424f6538cd3.js  464cb052fa24.js  5111dc291980.js  551e0dbed1b0.js  5be19eaf4410.js  5eeb2409f816.js  6924398eef96.js  6c02b2756cbf.js  6c9607cf9081.js  6e6049d1534c.js  7009014460b5.js  7beee5fee857.js  root.js
docs/search.index/desc/: 44f7bd8261e9.js
docs/search.index/function/: 2b8f5eecb80d.js
docs/search.index/generic_inverted_index/: 468cf4d4bdf4.js
docs/search.index/name/: 3be2c8c8bdae.js
docs/search.index/path/: a6a1d1d225ee.js
docs/src/bench_local/: bench_local.rs.html
docs/src/umiaq/: bindings.rs.html  complex_constraints.rs.html  constraints.rs.html  log.rs.html  patterns.rs.html  scan_hints.rs.html  solver.rs.html  umiaq_char.rs.html
docs/umiaq/: all.html  index.html
docs/umiaq_cli/: all.html  fn.main.html  fn.try_main.html  index.html  sidebar-items.js  struct.Cli.html
pkg/: README.md  package.json  umiaq.d.ts  umiaq.js  umiaq_bg.wasm  umiaq_bg.wasm.d.ts
src/: bindings.rs  comparison_operator.rs  complex_constraints.rs  constraints.rs  entry_list.rs  errors.rs  interner.rs  joint_constraints.rs  lib.rs  log.rs  main.rs  patterns.rs  scan_hints.rs  solver.rs  umiaq_char.rs  wasm.rs  word_list.rs  wordlist.rs
src/parser/: form.rs  matcher.rs  mod.rs  prefilter.rs  utils.rs
staging/: README.md  index.html
staging/docs/: help.html  settings.html
staging/pkg/: package.json  umiaq.d.ts  umiaq_bg.wasm  umiaq_bg.wasm.d.ts
tests/: integration_tests.rs
tests/resources/: expected_error_codes.md
web/: entry-list.js  examples.html  index.html  solver.worker.js  umiaq.css  word-list.js
(+191 files in other folders)
