[package]
name = "umiaq"
version = "0.5.0"
edition = "2024"
description = "An entry-equation solver"
repository = "https://github.com/Crossword-Nexus/umiaq"
license = "MIT"
default-run = "umiaq_cli"

[lib]
name = "umiaq"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "umiaq_cli"
path = "src/main.rs"

[[bin]]
name = "bench_local"
path = "src/bin/bench_local.rs"

[dependencies]
nom = "8.0.0"
clap = { version = "4.6.0", features = ["derive"] }
thiserror = "2.0.18"
fancy-regex = "0.17.0"
web-time = "1.1.0"
once_cell = "1.21.4"
log = "0.4.29"

# native-only logging
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

# --- WASM-only deps (compiled only when target_arch = "wasm32") ---
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
console_log = "1.0"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Navigator", "Location"] }

[build-dependencies]
time = { version = "0.3", features = ["formatting", "macros"] }
